- added various pipeline management

--- a/config.js.dist
+++ b/config.js.dist
@@ -1,6 +1,6 @@
 window.PipeWatchConfig = {
   api_token: null, // if not provided, login box will be prompted
-  pipeline_id: 4, // pipe to be analyzed
+  default_pipeline_id: 4, // pipe to be analyzed
   default_view: 'pipeline', // pipeline | timeline
   jail_feature: true, // if you want to use admin_users feature
   admin_users: [ // users that could see global statistics and other users' statistics
