--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "jquery": "~2.1.0",
     "bootstrap": "~3.1.1",
-    "momentjs": "~2.5.1"
+    "momentjs": "~2.5.1",
+    "basil.js": "~0.2.5"
   }
 }
